--- a/src/app/user-auth/register/register.component.html
+++ b/src/app/user-auth/register/register.component.html
@@ -6,16 +6,19 @@
                 <div class="card-body">
                     <form>
                         <div class="mb-3">
-                            <h4 class="text-dark text-muted">Register</h4>
+                            <h4 class="text-dark text-muted text-center">Register</h4>
                         </div>
                         <div class="mb-3">
-                          <label for="exampleInputEmail1" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" name="email" [(ngModel)]="email">
-                          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                            <label for="userName" class="form-label">User Name</label>
+                            <input type="text" class="form-control" id="userName" name="userName" [(ngModel)]="user">
+                          </div>
+                        <div class="mb-3">
+                          <label for="email" class="form-label">Email</label>
+                          <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
                         </div>
                         <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" name="password" [(ngModel)]="password">
+                          <label for="password" class="form-label">Password</label>
+                          <input type="password" class="form-control" id="password" name="password" [(ngModel)]="password">
                         </div>
                         <button type="button" class="btn btn-info" (click)="register()">Register</button>
                         <div class="row">
