--- a/src/app/dashboard/add-doctor/add-doctor.component.html
+++ b/src/app/dashboard/add-doctor/add-doctor.component.html
@@ -1,1 +1,33 @@
-<p>add-doctor works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <div class="card border-0 shadow p-3">
+                <div class="form-floating mb-3 tetx-center">
+                    <h5 class="text-center text-warning">Add Doctor</h5>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="firstName" name="firstname" [(ngModel)]="name">
+                    <label for="firstname">Doctor's Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="degree">
+                    <label for="lastName">Degree</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="lastName" name="lastName" [(ngModel)]="hospital">
+                    <label for="lastName">Hospital Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                    <label for="email">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="mobile" name="mobile" [(ngModel)]="mobile">
+                    <label for="mobile">Mobile</label>
+                </div>
+                <button type="button" class="btn btn-outline-success" (click)="addDoctor()">Add Doctor</button>
+        
+            </div>
+        </div>
+    </div>
+</div>
