--- a/src/app/dashboard/add-doctor/add-doctor.component.html
+++ b/src/app/dashboard/add-doctor/add-doctor.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-    <div class="row">
-        <div class="col-6">
+        <div class="col">
             <div class="card border-0 shadow p-3">
                 <div class="form-floating mb-3 tetx-center">
-                    <h5 class="text-center text-warning">Add Doctor</h5>
+                    <h3 class="text-center text-warning">Add Doctor</h3>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="firstName" name="firstname" [(ngModel)]="name">
@@ -29,5 +28,4 @@
         
             </div>
         </div>
-    </div>
 </div>
