--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class=" container ">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" routerLink="/home">
           <img src="https://www.wellcare.com/-/media/Providers/provider_02/providermedicareiconblue.ashx?h=256&w=256&la=en&hash=19DFD3521F684823941D4A56FA217A7A" alt="" width="50" height="50">
           Medicare
       </a>
@@ -10,16 +10,16 @@
       <div class="collapse navbar-collapse " [ngbCollapse]="isCollapsed" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
           <li class="nav-item px-3">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link active" aria-current="page" href="#">Service</a>
+            <a class="nav-link active" aria-current="page" routerLink="/service">Service</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link active" aria-current="page" href="#">Doctor</a>
+            <a class="nav-link active" aria-current="page" routerLink="/doctor">Doctor</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link active" aria-current="page" href="#">About</a>
+            <a class="nav-link active" aria-current="page" routerLink="/about">About</a>
           </li>
         </ul>
         <div class="d-flex align-items-center">
