--- a/src/app/components/all-doctor/all-doctor.component.html
+++ b/src/app/components/all-doctor/all-doctor.component.html
@@ -1,7 +1,26 @@
-<h1>hello</h1>
-<tbody>
-    <tr *ngFor="let doctor of doctorList">
-     <td> {{ doctor.name }}</td>
-    </tr>
-    </tbody>
+<div class="container">
+    <table class="table table-dark table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Doctor Name</th>
+                <th scope="col">Degree</th>
+                <th scope="col">Hospital</th>
+                <th scope="col">Email</th>
+                <th scope="col">Mobile</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr scope="col table-secondary" *ngFor="let doctor of doctorList">
+                <td class="table-secondary">{{doctor.name}}</td>
+                <td class="table-secondary">{{doctor.degree}}</td>
+                <td class="table-secondary">{{doctor.hospital}}</td>
+                <td class="table-secondary">{{doctor.email}}</td>
+                <td class="table-secondary">{{doctor.mobile}}</td>
+            </tr>
+            
+        </tbody>
+    </table>
+</div>
+
+   
 
