--- a/src/app/user-auth/register/register.component.html
+++ b/src/app/user-auth/register/register.component.html
@@ -23,6 +23,15 @@
                             </div>
                             
                         </div>
+                        <div class="row mt-2">
+                            <a (click)="signInWithGoogle()" style="text-decoration: none;">
+                                <div class="card bg-secondary bg-opacity-75 text-white shadow-1 text-center">
+                                    <div class="card-body">
+                                            <img src="../../../assets/images/2991148.png" alt="" height="40" width="40"> Sign in with Google
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                       </form>
                 </div>
             </div>
