--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -24,9 +24,9 @@
                         </div>
                         <div class="row mt-2">
                             <a (click)="signInWithGoogle()" style="text-decoration: none;">
-                                <div class="card shadow-1 text-center">
+                                <div class="card bg-secondary bg-opacity-75 text-white shadow-1 text-center">
                                     <div class="card-body">
-                                            <img src="https://cdn.icon-icons.com/icons2/800/PNG/512/_google_icon-icons.com_65791.png" alt="" height="40" width="40"> Sign in with Google
+                                            <img src="../../../assets/images/2991148.png" alt="" height="40" width="40"> Sign in with Google
                                     </div>
                                 </div>
                             </a>
