--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
 <app-banner></app-banner>
 <app-add-doctor></app-add-doctor>
+<app-add-review></app-add-review>
+<app-all-review></app-all-review>
 <app-footer></app-footer>
