--- a/src/app/dashboard/all-doctor/all-doctor.component.html
+++ b/src/app/dashboard/all-doctor/all-doctor.component.html
@@ -16,12 +16,13 @@
                 <td class="table-secondary">{{doctor.hospital}}</td>
                 <td class="table-secondary">{{doctor.email}}</td>
                 <td class="table-secondary">{{doctor.mobile}}</td>
-                <button class="btn btn-danger" (click)="deleteDoctor(doctor)">Delete</button> 
+                <button class="btn btn-danger" >Delete</button> 
+                
             </tr>
             
         </tbody>
     </table>
 </div>
-
+<!-- (click)="deleteDoctor(doctor)" -->
    
 
