--- a/src/app/dashboard/review-modal/review-modal.component.html
+++ b/src/app/dashboard/review-modal/review-modal.component.html
@@ -1,22 +1,24 @@
 <div class="container ">
-  <div class="col-lg-6 mx-auto">
-    <form class="card border-0 shadow p-3" #reviewForm="ngForm" (ngSubmit)="reviewSubmit(reviewForm)">
+  <div class="col-lg mx-auto">
+    <form class="card border-0 shadow p-3" (ngSubmit)="updateReview()">
+      <input type="hidden" name="id" [(ngModel)]="review.id" />
       <div class="form-floating mb-3 tetx-center">
         <h3 class="text-center text-warning">Add Review</h3>
       </div>
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="firstName" name="firstname" [(ngModel)]="name">
+        <input type="text" class="form-control" id="firstName" name="firstname" [(ngModel)]="review.name">
         <label for="firstname"> Name</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+        <input type="email" class="form-control" id="email" name="email" [(ngModel)]="review.email">
         <label for="email">Email</label>
       </div>
       <div class="form-floating mb-3">
-        <textarea class="form-control" rows="5" id="mobile" name="mobile" [(ngModel)]="review"></textarea>
+        <textarea class="form-control" rows="5" id="mobile" name="mobile" [(ngModel)]="review.review"></textarea>
         <label for="mobile">Review</label>
       </div>
       <input type="submit" value="submit" class="form-control btn btn-primary" />
+
     </form>
 
   </div>
