--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
           </li>
           <li class="nav-item px-3">
-            <a class="nav-link active" aria-current="page" routerLink="/service">Service</a>
+            <a class="nav-link active" aria-current="page" routerLink="/services">Services</a>
           </li>
           <li class="nav-item px-3">
             <a class="nav-link active" aria-current="page" routerLink="/doctor">Doctor</a>
