--- a/src/app/dashboard/add-doctor/add-doctor.component.html
+++ b/src/app/dashboard/add-doctor/add-doctor.component.html
@@ -1,6 +1,6 @@
 <div class="container">
         <div class="col">
-            <div class="card border-0 shadow p-3">
+            <form class="card border-0 shadow p-3" #doctorForm="ngForm" (click)="addDoctor(doctorForm)">
                 <div class="form-floating mb-3 tetx-center">
                     <h3 class="text-center text-warning">Add Doctor</h3>
                 </div>
@@ -24,9 +24,9 @@
                     <input type="text" class="form-control" id="mobile" name="mobile" [(ngModel)]="mobile">
                     <label for="mobile">Mobile</label>
                 </div>
-                <button type="button" class="btn btn-outline-success" (click)="addDoctor()">Add Doctor</button>
+                <button type="button" class="btn btn-outline-success">Add Doctor</button>
         
-            </div>
+            </form>
             
         </div>
 </div>
