--- a/src/app/dashboard/add-medi-service/add-medi-service.component.html
+++ b/src/app/dashboard/add-medi-service/add-medi-service.component.html
@@ -1,30 +1,20 @@
-
- <form #loginForm="ngForm" (ngSubmit)="addData(loginForm.value)">
-  <div class="main">
-    <div class="input-fields">
-      <input name="name" ngModel placeholder="Name" id="name" type="text" class="input-field" />
-    </div>
-    <div class="input-fields">
-      <input name="email" ngModel placeholder="Email" id="email" type="email" class="input-field" />
-    </div>
-    <div class="input-fields">
-      <input name="password" ngModel placeholder="Password" id="password" type="password" class="input-field" />
-    </div>
-    <button>Add Data </button>
-  </div>
-</form> 
-
- <ul>
-    <li *ngFor="let item of data">
-      {{ item.email }}
-      {{ item.name }}
-      {{ item.password }}
-      <button (click)="updateData(item.id)">
-        Update
-      </button>
+<div class="container ">
+  <div class="col-lg-6 mx-auto">
+    <form class="card border-0 shadow p-3" #addMediForm="ngForm" (ngSubmit)="addMediServices(addMediForm)">
+      <div class="form-floating mb-3 tetx-center">
+        <h3 class="text-center text-warning">Add Medi Services</h3>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="firstName" name="firstname" [(ngModel)]="name">
+        <label for="firstname"> Name</label>
+      </div>
+      <div class="form-floating mb-3">
+        <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+        <label for="email">Email</label>
+      </div>
    
-      <button (click)="deleteData(item.id)">
-        Delete
-      </button> 
-    </li>
-  </ul> 
+      <input type="submit" value="submit" class="form-control btn btn-primary" />
+    </form>
+
+  </div>
+</div>
