--- a/src/app/dashboard/all-doctor/all-doctor.component.html
+++ b/src/app/dashboard/all-doctor/all-doctor.component.html
@@ -7,6 +7,8 @@
                 <th scope="col">Hospital</th>
                 <th scope="col">Email</th>
                 <th scope="col">Mobile</th>
+                <th scope="col">Action</th>
+                
             </tr>
         </thead>
         <tbody>
@@ -16,7 +18,12 @@
                 <td class="table-secondary">{{doctor.hospital}}</td>
                 <td class="table-secondary">{{doctor.email}}</td>
                 <td class="table-secondary">{{doctor.mobile}}</td>
-                <button class="btn btn-danger" >Delete</button> 
+                <td class="table-secondary">
+                    <button class="btn btn-danger mx-2" (click)="deleteDoctor(doctor)" >Delete</button>
+                    <button class="btn btn-primary mx-2" >Update</button>
+                </td>
+               
+                <!-- (click)="openModal(review)" -->
                 
             </tr>
             
