--- a/src/app/dashboard/all-doctor/all-doctor.component.html
+++ b/src/app/dashboard/all-doctor/all-doctor.component.html
@@ -1,35 +1,18 @@
 <div class="container">
-    <table class="table table-dark table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Doctor Name</th>
-                <th scope="col">Degree</th>
-                <th scope="col">Hospital</th>
-                <th scope="col">Email</th>
-                <th scope="col">Mobile</th>
-                <th scope="col">Action</th>
-                
-            </tr>
-        </thead>
-        <tbody>
-            <tr scope="col table-secondary" *ngFor="let doctor of Doctors">
-                <td class="table-secondary">{{doctor.name}}</td>
-                <td class="table-secondary">{{doctor.degree}}</td>
-                <td class="table-secondary">{{doctor.hospital}}</td>
-                <td class="table-secondary">{{doctor.email}}</td>
-                <td class="table-secondary">{{doctor.mobile}}</td>
-                <td class="table-secondary">
-                    <button class="btn btn-danger mx-2" (click)="deleteDoctor(doctor)" >Delete</button>
-                    <button class="btn btn-primary mx-2" >Update</button>
-                </td>
-               
-                <!-- (click)="openModal(review)" -->
-                
-            </tr>
-            
-        </tbody>
-    </table>
+    <h1 class="text-center">Our All Doctors</h1>
+    <div class="row">
+        <div class="col-lg-3 card" *ngFor="let doctor of Doctors">
+            <div class="py-3">
+                <img src="{{doctor.photo}}" alt="" height="300px" width="300px">
+            </div>
+            <div>
+                <h5>{{doctor.name}}</h5>
+                <h6>{{doctor.degree}}</h6>
+                <p>{{doctor.hospital}}</p>
+                <p>{{doctor.email}} <br> {{doctor.mobile}}</p>
+             
+            </div>
+        </div>
+    </div>
 </div>
-<!-- (click)="deleteDoctor(doctor)" -->
-   
 
