--- a/src/app/dashboard/best-doctor/best-doctor.component.html
+++ b/src/app/dashboard/best-doctor/best-doctor.component.html
@@ -1,1 +1,20 @@
-<p>best-doctor works!</p>
+<div class="container">
+  <h1 class="text-center">Our Best Doctors</h1>
+  <hr />
+  <div class="row">
+    <div class="col-lg-3 card" *ngFor="let doctor of Doctors.slice(0, 4)">
+      <div class="py-3">
+        <img src="{{ doctor.photo }}" alt="" height="300px" width="300px" />
+      </div>
+      <div>
+        <h5>{{ doctor.name }}</h5>
+        <h6>{{ doctor.degree }}</h6>
+        <p>{{ doctor.hospital }}</p>
+        <p>
+          {{ doctor.email }} <br/>
+          {{ doctor.mobile }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
