--- a/src/app/dashboard/best-doctor/best-doctor.component.html
+++ b/src/app/dashboard/best-doctor/best-doctor.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="text-center">Our Best Doctors</h1>
+  <h1 class="text-center mt-3">Our Best Doctors</h1>
   <hr />
   <div class="row">
     <div class="col-lg-3 card" *ngFor="let doctor of Doctors.slice(0, 4)">
