--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -15,6 +15,7 @@
         </div>
         <div class="col-md-10 mt-5">
             <app-add-doctor></app-add-doctor>
+            <app-add-medi-service></app-add-medi-service>
         </div>
     </div>
 </div>
