--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-banner></app-banner>
+<app-best-services></app-best-services>
 <app-best-doctor></app-best-doctor>
 <app-all-review></app-all-review>
 <app-footer></app-footer>
