--- a/src/app/dashboard/add-review/add-review.component.html
+++ b/src/app/dashboard/add-review/add-review.component.html
@@ -1,5 +1,5 @@
 <div class="container ">
-  <div class="col-lg-6 mx-auto">
+  <div class="col-lg mx-auto">
     <form class="card border-0 shadow p-3" #reviewForm="ngForm" (ngSubmit)="reviewSubmit(reviewForm)">
       <div class="form-floating mb-3 tetx-center">
         <h3 class="text-center text-warning">Add Review</h3>
