All modal added

--- a/src/app/dashboard/add-review/add-review.component.html
+++ b/src/app/dashboard/add-review/add-review.component.html
@@ -13,6 +13,10 @@
         <label for="email">Email</label>
       </div>
       <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="Photo" name="photo" [(ngModel)]="photo">
+        <label for="photo">Photo Link</label>
+      </div>
+      <div class="form-floating mb-3">
         <textarea class="form-control" rows="5" id="mobile" name="mobile" [(ngModel)]="review"></textarea>
         <label for="mobile">Review</label>
       </div>
