--- a/src/app/dashboard/all-doctor/all-doctor.component.html
+++ b/src/app/dashboard/all-doctor/all-doctor.component.html
@@ -1,18 +1,20 @@
 <div class="container">
-    <h1 class="text-center">Our All Doctors</h1>
-    <div class="row">
-        <div class="col-lg-3 card" *ngFor="let doctor of Doctors">
-            <div class="py-3">
-                <img src="{{doctor.photo}}" alt="" height="300px" width="300px">
-            </div>
-            <div>
-                <h5>{{doctor.name}}</h5>
-                <h6>{{doctor.degree}}</h6>
-                <p>{{doctor.hospital}}</p>
-                <p>{{doctor.email}} <br> {{doctor.mobile}}</p>
-             
-            </div>
-        </div>
-    </div>
-</div>
+  <h1 class="text-center">Our All Doctors</h1>
+  <div class="row">
+    <div class="col-lg-3 card" *ngFor="let doctor of Doctors">
+      <div class="py-3">
+        <img src="{{doctor.photo}}" alt="" height="300px" width="300px">
+      </div>
+      <div>
+        <h5>{{doctor.name}}</h5>
+        <h6>{{doctor.degree}}</h6>
+        <p>{{doctor.hospital}}</p>
 
+        <div class="card my-2">
+          <button class="btn btn-success" (click)="openModal(doctor)">Appointment Now</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
