--- a/src/app/dashboard/all-medi-services/all-medi-services.component.html
+++ b/src/app/dashboard/all-medi-services/all-medi-services.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="text-center">Our Medi Services</h1>
-  <div class="row">
-      <div class="col-lg-4 card" *ngFor="let medi of medi_services">
+  <div class="row mt-5">
+      <div class="col-lg-4  card" *ngFor="let medi of medi_services">
           <div class="py-3">
               <img src="{{medi.photo}}" alt="" height="300px" width="415px">
           </div>
