--- a/src/app/dashboard/all-review/all-review.component.html
+++ b/src/app/dashboard/all-review/all-review.component.html
@@ -1,14 +1,16 @@
-<div class="container">
-    
-<div class="row  g-3">
-    <div class="col" *ngFor="let review of reviews.slice(0,4)">
-      <div class="card">
-          <div class="mx-auto p-3">
-            <img src="https://cdn-icons-png.flaticon.com/128/709/709699.png" class="card-img-top " style="height: 100px; width: 100px;" alt="...">
+<div class="container mt-5">
+  <h1 class="text-center">Review</h1>
+  <hr>
+<div class="row mt-5 ">
+    <div class="col " *ngFor="let review of reviews.slice(0,4)">
+      <div class="card shadow border-0">
+          <div class="mx-auto  p-3">
+            <img src="{{review.photo}}" class="card-img-top rounded-circle " style="height: 100px; width: 100px;" alt="...">
+            <h5 class="card-title my-2">{{review.name}}</h5>
           </div>
         
         <div class="card-body">
-          <h5 class="card-title">{{review.name}}</h5>
+          
           <p class="card-text">{{review.review}}</p>
           <!-- <p>{{review.email}}</p> -->
         </div>
