--- a/src/app/dashboard/doctor-list/doctor-list.component.html
+++ b/src/app/dashboard/doctor-list/doctor-list.component.html
@@ -20,14 +20,14 @@
                 <td class="table-secondary">{{doctor.mobile}}</td>
                 <td class="table-secondary">
                     <button class="btn btn-danger mx-2" (click)="deleteDoctor(doctor)" >Delete</button>
-                    <button class="btn btn-primary mx-2" >Update</button>
+                    <button class="btn btn-primary mx-2" (click)="openModal(doctor)" >Update</button>
                 </td>
                
-                <!-- (click)="openModal(review)" -->
+        
                 
             </tr>
             
         </tbody>
     </table>
 </div>
-<!-- (click)="deleteDoctor(doctor)" -->
+
