--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<p>not-found works!</p>
+<div class="container ">
+    <div  >
+        <img class="mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/29/Loader.gif/480px-Loader.gif" alt="">
+    </div>
+</div>
