--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row" >
-        <div class="col-md-2 card  text-center" style="height: 100vh;">
+        <div class="col-md-2 card  text-center" style="height: 80vh;">
             <h1 class=" p-3">Dashboard</h1>
             <div class="card border-0">
                 <button (click)="addDoctor()" class="btn btn-secondary p-3 mb-2">Add Doctor</button>
@@ -9,6 +9,7 @@
                 <button (click)="doctorList()" class="btn btn-secondary p-3 mb-2">Doctor List</button>
                 <button class="btn btn-secondary p-3 mb-2">Medi Services List</button>
                 <button class="btn btn-secondary p-3 mb-2">Order List</button>
+                <button class="btn btn-secondary p-3 mb-2">Appoinment List</button>
                 <button class="btn btn-secondary p-3 mb-2">Payment</button>
             </div>
         </div>
