--- a/src/app/dashboard/appointment-modal/appointment-modal.component.html
+++ b/src/app/dashboard/appointment-modal/appointment-modal.component.html
@@ -1,1 +1,37 @@
-<p>appointment-modal works!</p>
+<div class="container">
+    <div class="col">
+        <form class="card border-0 shadow p-3" #appoinmentForm="ngForm">
+            <div class="form-floating mb-3 tetx-center">
+                <h3 class="text-center text-warning">Appoinment Now</h3>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="Name" name="name" [(ngModel)]="patient_name">
+                <label for="name">Patient name</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="Age" name="age" [(ngModel)]="age">
+                <label for="age">Age</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="Address" name="address" [(ngModel)]="address">
+                <label for="address">Address</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="Problem" name="problem" [(ngModel)]="problem">
+                <label for="problem">Problem</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="time" class="form-control" id="Time" name="time" [(ngModel)]="time">
+                <label for="time">Time</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="date" class="form-control" id="Date" name="data" [(ngModel)]="data">
+                <label for="data">Date</label>
+            </div>
+            <button type="button" class="btn btn-outline-success" (click)="addAppoinment(appoinmentForm)">Submit Appoinment</button>
+    
+        </form>
+        
+    </div>
+</div>
+
