--- a/src/app/dashboard/all-medi-services/all-medi-services.component.html
+++ b/src/app/dashboard/all-medi-services/all-medi-services.component.html
@@ -3,7 +3,7 @@
   <div class="row mt-5">
       <div class="col-lg-4  card" *ngFor="let medi of medi_services">
           <div class="py-3">
-              <img src="{{medi.photo}}" alt="" height="300px" width="415px">
+              <img class="img-fluid" src="{{medi.photo}}" alt="" height="300px" width="415px">
           </div>
           <div>
               <h5>{{medi.service_name}}</h5>
