--- a/src/app/dashboard/best-doctor/best-doctor.component.html
+++ b/src/app/dashboard/best-doctor/best-doctor.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-lg-3 card" *ngFor="let doctor of Doctors.slice(0, 4)">
       <div class="py-3">
-        <img src="{{ doctor.photo }}" alt="" height="300px" width="300px" />
+        <img class="img-fluid" src="{{ doctor.photo }}" alt="" height="300px" width="300px" />
       </div>
       <div>
         <h5>{{ doctor.name }}</h5>
