--- a/src/app/dashboard/best-services/best-services.component.html
+++ b/src/app/dashboard/best-services/best-services.component.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-4 card" *ngFor="let medi of medi_services.slice(0, 3)">
             <div class="py-3">
-                <img src="{{medi.photo}}" alt="" height="300px" width="415px">
+                <img class="img-fluid" src="{{medi.photo}}" alt="" height="300px" width="415px">
             </div>
             <div>
                 <h5>{{medi.service_name}}</h5>
