--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,6 +21,9 @@
           <li class="nav-item px-3">
             <a class="nav-link active" aria-current="page" routerLink="/about">About</a>
           </li>
+          <li class="nav-item px-3">
+            <a class="nav-link active" aria-current="page" routerLink="/dashboard">Dashboard</a>
+          </li>
         </ul>
         <div class="d-flex align-items-center">
           <h6 className="text-light">Medicare user</h6>
