medi services list added

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,22 +1,29 @@
 <div class="container">
   <div class="mt-5">
-    <img class="img-fluid mx-auto d-block" src="https://mcol.com/kbmgmedicareterms.jpg" alt="">
+    <img
+      class="img-fluid mx-auto d-block"
+      src="https://mcol.com/kbmgmedicareterms.jpg"
+      alt=""
+    />
   </div>
   <div class="card border-0 shadow">
     <p class="p-3">
-      Medicare is a government national health insurance program in the United States, begun in 1965 under the Social
-      Security Administration (SSA) and now administered by the Centers for Medicare and Medicaid Services (CMS). It
-      primarily provides health insurance for Americans aged 65 and older, but also for some younger people with
-      disability status as determined by the SSA, including people with end stage renal disease and amyotrophic lateral
-      sclerosis (ALS or Lou Gehrig's disease).
-
-      In 2018, according to the 2019 Medicare Trustees Report, Medicare provided health insurance for over 59.9 million
-      individuals—more than 52 million people aged 65 and older and about 8 million younger people.[1] According to
-      annual Medicare Trustees reports and research by the government's MedPAC group, Medicare covers about half of
-      healthcare expenses of those enrolled. Enrollees almost always cover most of the remaining costs by taking
-      additional private insurance and/or by joining a public Part C or Part D Medicare health plan.[2] In 2020, US
-      federal government spending on Medicare was $776.2 billion.[3]
+      Medicare is a government national health insurance program in the United
+      States, begun in 1965 under the Social Security Administration (SSA) and
+      now administered by the Centers for Medicare and Medicaid Services (CMS).
+      It primarily provides health insurance for Americans aged 65 and older,
+      but also for some younger people with disability status as determined by
+      the SSA, including people with end stage renal disease and allotrophic
+      lateral sclerosis (ALS or Lou Gehrig's disease). In 2018, according to the
+      2019 Medicare Trustees Report, Medicare provided health insurance for over
+      59.9 million individuals—more than 52 million people aged 65 and older and
+      about 8 million younger people.[1] According to annual Medicare Trustees
+      reports and research by the government's MedPAC group, Medicare covers
+      about half of healthcare expenses of those enrolled. Enrollees almost
+      always cover most of the remaining costs by taking additional private
+      insurance and/or by joining a public Part C or Part D Medicare health
+      plan.[2] In 2020, US federal government spending on Medicare was $776.2
+      billion.[3]
     </p>
   </div>
-
 </div>
