--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -3,14 +3,14 @@
         <div class="col-md-2 card  text-center" style="height: 100vh;">
             <h3 class=" p-3">Dashboard</h3>
             <div class="card border-0">
-                <button (click)="addDoctor()" class="btn btn-secondary p-3 mb-2">Add Doctor</button>
-                <button (click)="addMedi()" class="btn btn-secondary p-3 mb-2">Add Medi Services</button>
-                <button (click)="sendReview()" class="btn btn-secondary p-3 mb-2">Send Review</button>
-                <button (click)="doctorList()" class="btn btn-secondary p-3 mb-2">Doctor List</button>
-                <button (click)="mediServicesList()" class="btn btn-secondary p-3 mb-2">Medi Services List</button>
-                <button class="btn btn-secondary p-3 mb-2">Order List</button>
-                <button class="btn btn-secondary p-3 mb-2">Appoinment List</button>
-                <button class="btn btn-secondary p-3 mb-2">Payment</button>
+                <button (click)="addDoctor()" class="btn btn-secondary p-1 mb-1">Add Doctor</button>
+                <button (click)="addMedi()" class="btn btn-secondary p-1 mb-1">Add Medi Services</button>
+                <button (click)="sendReview()" class="btn btn-secondary p-1 mb-1">Send Review</button>
+                <button (click)="doctorList()" class="btn btn-secondary p-1 mb-1">Doctor List</button>
+                <button (click)="mediServicesList()" class="btn btn-secondary p-1 mb-1">Medi Services List</button>
+                <button class="btn btn-secondary p-1 mb-1">Order List</button>
+                <button class="btn btn-secondary p-1 mb-1">Appointment List</button>
+                <button class="btn btn-secondary p-1 mb-1">Payment</button>
             </div>
         </div>
         <div [ngSwitch]="display" class="col-md-10 mt-5">
