--- a/src/app/user-auth/register/register.component.html
+++ b/src/app/user-auth/register/register.component.html
@@ -10,11 +10,11 @@
                         </div>
                         <div class="mb-3">
                           <label for="email" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                          <input type="email" class="form-control" id="email" description="email" [(ngModel)]="email">
                         </div>
                         <div class="mb-3">
                           <label for="password" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="password" name="password" [(ngModel)]="password">
+                          <input type="password" class="form-control" id="password" description="password" [(ngModel)]="password">
                         </div>
                         <button type="button" class="btn btn-info" (click)="register()">Register</button>
                         <div class="row">
