--- a/src/app/dashboard/best-services/best-services.component.html
+++ b/src/app/dashboard/best-services/best-services.component.html
@@ -8,7 +8,7 @@
             </div>
             <div>
                 <h5>{{medi.service_name}}</h5>
-                <p>{{medi.discription}}</p>
+                <p>{{medi.description}}</p>
             </div>
             <div class="card border-0">
               <h3>Price: {{medi.price}} Taka</h3>
