--- a/src/app/dashboard/medi-services-list/medi-services-list.component.html
+++ b/src/app/dashboard/medi-services-list/medi-services-list.component.html
@@ -1,1 +1,27 @@
-<p>medi-services-list works!</p>
+<div class="container">
+    <table class="table table-dark table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Services Name</th>
+          <th scope="col">Description</th>
+          <th scope="col">Price</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr scope="col table-secondary" *ngFor="let medi of medi_services">
+          <td class="table-secondary">{{ medi.service_name}}</td>
+          <td class="table-secondary">{{ medi.description }}</td>
+          <td class="table-secondary">{{ medi.price }}</td>
+          <td class="table-secondary">
+            <button class="btn btn-danger mx-1" (click)="deleteMediServices(medi)">
+              Delete
+            </button>
+            <button class="btn btn-primary mx-1" (click)="openModal(medi)">
+              Update
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
