--- a/src/app/user-auth/login/login.component.html
+++ b/src/app/user-auth/login/login.component.html
@@ -10,11 +10,11 @@
                         </div>
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label">Email</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" name="email" [(ngModel)]="email">
+                          <input type="email" class="form-control" id="exampleInputEmail1" description="email" [(ngModel)]="email">
                         </div>
                         <div class="mb-3">
                           <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1" name="password" [(ngModel)]="password">
+                          <input type="password" class="form-control" id="exampleInputPassword1" description="password" [(ngModel)]="password">
                         </div>
                         <button type="button" class="btn btn-info" (click)="login()">Login</button>
                         <div class="row">
